--- a/src/components/App/styles.css
+++ b/src/components/App/styles.css
@@ -1,9 +1,6 @@
 .app {
-  width: 500px;
+  width: 1000px;
   margin: 1em auto;
   text-align: center;
-}
-
-.app img {
-  max-width: 150px;
+  background-color: #EEEFEA;
 }
