--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -5,22 +5,16 @@
   color: $writeColor;
   font-size: 2.5rem;
   border-bottom: 2px solid $writeColor;
+  padding-bottom: 1.5rem;
 
   .header-title-content {
  
     .header-bigTitle {
-      font-weight: bold;
       font-size: 5rem;
       text-align: left;
       padding-left: $gutter;
       padding-top: $gutter;
       padding-bottom: 1.2rem;
-    }
-  
-    .header-title {
-      font-size: 3rem;
-      text-align: left;
-      padding-left: 10rem;
     }
   }
 }
