--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -1,7 +1,8 @@
+@import 'src/styles/vars';
+
 .app {
   width: 1400px;
   margin: 1em auto;
   text-align: center;
   background-color: #EEEFEA;
-  
 }
