--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -1,29 +1,42 @@
 @import 'src/styles/vars';
 
 .footer-content {
-  margin-top: $gutter;
+  margin-top: $gutter * 2;
   background-color: $headerFooterColor;
-  height: 20vh;
   border-top: 2px solid $writeColor;
+  font-size: 3rem;
+  padding-top: $gutter *2;
+  padding-bottom: $gutter * 2;
 
   .footer-nav {
-    margin-top: $gutter * 2;
+    margin-top: $gutter;
     display: flex;
     flex-flow: row nowrap;
     justify-content: center;
+    line-height: 5rem;
    
-    
-    li {
-      color: $writeColor;
-      font-size: 1.5rem;
-      padding-left: 2rem;
-      list-style: none;
-    }
+    .div-SOC {
+      display: flex;
+      flex-flow: column nowrap;
+      text-align: left;
+      padding-right: 2rem;
 
-    .copyright {
-      margin-top: 0.4rem;
-      margin-left: 3rem;
+      .div-title {
+        padding-right: 2rem;
+        text-decoration: underline;
+        line-height: 4rem;;
+      }
 
+      li {
+        color: $writeColor;
+        font-size: 3rem;
+        list-style: none;
+      }
     }
+  }
+
+  .copyright {
+    padding-top: 3rem;
+    color: #640070;
   }
 }
