--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -29,16 +29,21 @@
         height: 90vh;
       }
 
-      .description {
-        width: 400px;
-        height: 90vh;
-        font-size: 2rem;
-        color: $writeColor;
-        padding-top: 3rem;
-        text-align: center;
-        padding-left: 1rem;
-        padding-right: 1rem;
-        line-height: 3rem;
+      .description-container {
+        .description {
+          width: 400px;
+          height: 70vh;
+          font-size: 2rem;
+          color: $writeColor;
+          padding-top: 3rem;
+          text-align: center;
+          padding-left: 1.5rem;
+          padding-right: 1.5rem;
+          line-height: 3rem;
+        }
+        .home-li {
+          font-size: 1.5rem;
+        }
       }
     }
   }
@@ -53,10 +58,9 @@
 
 
     .presentation-container {
-
       .picture {
         width: 200px;
-        height: 40vh;
+        height: 50vh;
       }
 
       .description {
